@@ -966,6 +966,9 @@ INIFILTER_FILTER_NAME=Key\=Value Text Files
 
 DWFILTER_FILTER_NAME=DokuWiki Files
 
+# MagentoFilter.java
+MAGENTOFILTER_FILTER_NAME=Magento CE Locale CSV Files
+
 # org.omegat.filters3.xml.opendoc.OpenDocFilter
 
 OpenDoc_FILTER_NAME=OpenDocument/OpenOffice.org Files
@@ -1021,7 +1024,7 @@ ABOUTDIALOG_COPYRIGHT=Copyright \u00a9 2000-2011 Keith Godfrey, Maxym Mykhalchuk
 
 ABOUTDIALOG_LICENSE_BUTTON=&License
 ABOUTDIALOG_CONTRIBUTORS=\
-    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by: \nZoltan Bartko, Volker Berlin, Didier Briel (development manager), Kim Bruning, Alex Buloichik (lead developer), Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Ibai Lakunza Velasco, Fabi\u00e1n Mandelbaum, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Rashid Umarov, Antonio Vilei and Martin Wunderlich\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries:\n  HTMLParser 1.6 by Somik Raha, Derrick Oswald and others (LGPL License)\n  MRJ Adapter 1.0.8 by Steve Roy (LGPL License)\n  VLDocking Framework 2.1.4 by VLSolutions (CeCILL License)\n  Hunspell by L\u00e1szl\u00f3 N\u00e9meth and others (LGPL License)\n  JNA by Todd Fast, Timothy Wall and others (LGPL License)\n  Swing-Layout 1.0.2 (LGPL License)\n  Jmyspell 2.1.4 (LGPL License) \n  JAXB (GPLv2 + classpath exception)
+    OmegaT is a free and open source multiplatform Computer Assisted Translation tool with fuzzy matching, translation memory, keyword search, glossaries, and translation leveraging into updated projects.\n\nOmegaT is the original work of Keith Godfrey.\nMarc Prior is the coordinator of the OmegaT project.\n\nCode has been contributed by: \nZoltan Bartko, Volker Berlin, Didier Briel (development manager), Kim Bruning, Alex Buloichik (lead developer), Sandra Jean Chua, Martin Fleurke, Wildrich Fourie, Thomas Huriaux, Ibai Lakunza Velasco, Fabi\u00e1n Mandelbaum, John Moran, Maxym Mykhalchuk, Arno Peters, Henry Pijffers, Briac Pilpr\u00e9, Tiago Saboga, Andrzej Sawu\u0142a, Benjamin Siband, Rashid Umarov, Antonio Vilei, Martin Wunderlich and Michael Zakharov\n\nOther contributions are detailed in the readme.txt file\n\nOmegaT uses the following libraries:\n  HTMLParser 1.6 by Somik Raha, Derrick Oswald and others (LGPL License)\n  MRJ Adapter 1.0.8 by Steve Roy (LGPL License)\n  VLDocking Framework 2.1.4 by VLSolutions (CeCILL License)\n  Hunspell by L\u00e1szl\u00f3 N\u00e9meth and others (LGPL License)\n  JNA by Todd Fast, Timothy Wall and others (LGPL License)\n  Swing-Layout 1.0.2 (LGPL License)\n  Jmyspell 2.1.4 (LGPL License) \n  JAXB (GPLv2 + classpath exception)
 
 # LicenseDialog.java
 
